--- a/myadv/inc/app.css
+++ b/myadv/inc/app.css
@@ -27,73 +27,64 @@ a {
     text-decoration: none;
 }
 
-
-
-
 /*==[ ]===============================*/
 
-.l-full {
-    width: 100%;
+
+.mobile {
+    width: 360px;
+    height: auto;
+    margin: auto;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #212121;
+    flex-direction: column;  
+    gap: 10px;
 }
 
-.l-center {
-    width: 1200px;
-    height: auto;
+h1 {
+    font-size: 2rem; 
+}
+
+p {
+    font-size: 1.4rem; 
+}
+img{
+    width: 100%;
+}
+
+.container-a {
+    width: 100%;
+    height: auto;   
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column;   
     padding: 15px;
+    background-color:antiquewhite;
+    
 }
 
-
-/*==[ ]===============================*/
-
-.header {
+.container-b {
     width: 100%;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 15px 10px 10px 15px;
-    color: #fff;
-}
-
-
-/*==[ ]===============================*/
-
-.grid-container {
-    width: 100%;
-    height: auto;
+    height: auto;   
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(319px, 1fr));
-    grid-gap: 15px;
-    padding: 15px;
-    margin-top: 90px;
+    grid-template-columns: 1fr;
+}
+.container-c {
+    width: 100%;
+    height: auto;   
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+.container-d {
+    width: 100%;
+    height: auto;   
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
-
-
-
-/*==[ 1024px ]===============================*/
-
-@media (max-width: 1024px) {
-  
-}
-
-
-/*==[ 768px ]===============================*/
-
-@media (max-width: 768px) {
-   
-}
-
-
-/*==[ 640px ]===============================*/
-
-@media (max-width: 640px) {
-   
+.container-e {
+    width: 100%;
+    height: auto;   
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
