--- a/agenda/app.css
+++ b/agenda/app.css
@@ -1,31 +1,170 @@
-.linha {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 15px;
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: 0;
 }
 
-.box {
-    width: 200px;
+html {
+    font-size: 62%;
+}
+
+html,
+body {
+    height: 100vh;   
+    font-family: "Source Sans Pro";
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+}
+
+body {
+    font-size: 1.6rem;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.l-full {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #212121;
+}
+
+.l-center {
+    width: 1200px;
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color: antiquewhite;
-    margin-top: 15px;
+    padding: 15px;
 }
 
-.menu {
+
+/*==[ ]===============================*/
+
+.header-menu {
     width: 100%;
-    height: auto;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 15px 10px 10px 15px;
+    color: #fff;
+}
+
+
+/*==[ ]===============================*/
+
+
+.opt {
+    width: 360px;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    background-color: antiquewhite;
+    align-items: center;  
     margin-top: 15px;
     gap: 10px;
+    color: #fff;
+}
+
+.opt select{
+    width: 150px;
+    height: 35px;
+    text-align: center;
+}
+
+.opt button{
+    width: 40px;
+    height: 35px;
+}
+
+
+
+.grid-c4 {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(319px, 1fr));
+    grid-gap: 30px;  
+    margin-top: 30px;
+}
+
+.container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;   
+    padding: 10px 60px 10px 60px;
+}
+
+
+
+
+.box {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid  rgb(220, 222, 228);
+}
+
+.b-header{
+    width: 100%;
+    height:40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(220, 222, 228);
+    border: 1px solid  rgb(220, 222, 228);
+}
+
+.b-header h4{
+   margin-left: 15px;
+}
+
+
+
+/*==[ 1024px ]===============================*/
+
+@media (max-width: 1024px) {
+    .l-center {
+        width: 100%;
+    }
+}
+
+
+/*==[ 768px ]===============================*/
+
+@media (max-width: 768px) {
+    .l-center {
+        width: 100%;
+    }
+}
+
+
+/*==[ 640px ]===============================*/
+
+@media (max-width: 360px) {
+    .l-center {
+        width: 100%;
+    }
+    .container{        
+        padding: 5px;
+    }
+
+    .b-header{
+        width: 100%;
+        height:30px;      
+    }
+    
+    .b-header h4{
+       margin-left: 5px;
+       font-size: 1.4rem;
+    }
 }
