--- a/myadv/inc/app.css
+++ b/myadv/inc/app.css
@@ -21,6 +21,7 @@ body {
 body {
     font-size: 1.6rem;
     text-decoration: none;
+    
 }
 
 a {
@@ -29,15 +30,39 @@ a {
 
 /*==[ ]===============================*/
 
+.main {
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    gap: 90px;
+}
+
+.mobile-a {
+    width: 360px;
+    height: auto;  
+    display: flex;
+    flex-direction: column;  
+    background-color: #b9e6ad;
+    margin-top: 15px;
+}
+
 
 .mobile {
     width: 360px;
-    height: auto;
+    height: 1024px;
     margin: auto;
     display: flex;
     flex-direction: column;  
-    gap: 10px;
+    background-color: #192516;
+    margin-top: 15px;
 }
+
+
+/*==[ ]===============================*/
+
+
 
 h1 {
     font-size: 2rem; 
@@ -49,6 +74,85 @@ p {
 img{
     width: 100%;
 }
+
+
+/*==[ MENU ]===============================*/
+
+
+.mobile-menu {
+    width: 100%;
+    height: 40px;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between; 
+    align-items: center;   
+    padding: 10px 10px 10px 15px;
+    color: #fff;
+}
+
+.mobile-menu i{
+   font-size: 1.6rem;
+}
+
+.menu-color{
+    background-color: #212121;
+}
+
+/*==[ ]===============================*/
+
+.mobile-body {
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: column;   
+    padding: 10px;
+    background-color:antiquewhite;
+    gap: 5px;
+}
+
+/*==[ ]===============================*/
+
+form{
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: column;  
+}
+.mobile-coluna{
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+
+.mobile-linha{
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    gap: 10px;
+}
+
+input, select{
+    width: 100%;
+    height: 30px; 
+    border: 1px solid #ccc;  
+    text-align: left;
+    padding-left: 8px;
+    border-radius: 3px;
+}
+
+/*==[ ]===============================*/
+
+
+/*==[ ]===============================*/
+
+
+/*==[ ]===============================*/
+
+
 
 .container-a {
     width: 100%;
@@ -87,4 +191,125 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+}
+
+/*=================================*/
+
+.capa {
+    width: 100%;
+    height: 560px;   
+    display: flex;
+    flex-direction: column;  
+    background-color:antiquewhite;   
+    object-fit: cover;
+}
+
+.capa img{
+    width: 100%;
+    height: 560px;   
+}
+
+
+.contra-capa {
+    width: 100%;
+    height: 560px;   
+    display: flex;
+    flex-direction: column; 
+    background: rgb(1,48,3);
+    background: linear-gradient(0deg, rgba(1,48,3,1) 14%, rgba(19,82,2,0.2147233893557423) 38%, rgba(6,106,5,0.0018382352941176405) 100%);
+
+
+margin-top: -560px;
+    z-index: 2;
+    opacity: 0.8;
+}
+
+.capa-container {
+    width: 100%;
+    height: 560px;   
+    display: flex;
+    flex-direction: column;
+    margin-top: -560px;
+    z-index: 4;   
+}
+
+.menu {
+    width: 100%;
+    height: 40px;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between; 
+    background-color: rgba(76, 235, 235, 0.233);
+    padding: 10px;
+    z-index: 6;
+}
+
+
+.nome {
+    width:  200px;
+    height: auto;   
+    display: flex;
+    flex-direction: column; 
+    margin-top: 300px;   
+    margin-left: 15px;
+}
+.nome h1{   
+    font-size: 3.4rem; 
+    color: white;  
+}
+
+.desc {
+    width:  200px;
+    height: auto;   
+    display: flex;
+    flex-direction: column; 
+    margin-top: 10px;
+    margin-left: 15px;
+    
+}
+.desc p{   
+    font-size: 1.8rem; 
+    color: white;  
+}
+
+.btnp {
+    width:  100%;
+    height: auto;   
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-end;
+    margin-top: -70px;  
+   
+}
+.btnp button{   
+    width: 60px;
+    height: 60px; 
+    border-radius: 100px;
+    margin-right: 15px;
+    border:none;
+    background-color: orangered;
+}
+
+.titulo-l {
+    width:  100%;
+    height: 60px;   
+    display: flex;
+    flex-direction: column;
+   justify-content: center;
+}
+.titulo-l p{   
+    font-size: 1.8rem; 
+    color: white; 
+    margin-left: 15px;
+}
+
+.album-l {
+    width: 100%;
+    height: 120px;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: flex-start; 
+    padding-left: 15px;
+    gap: 10px;
+       
 }
