--- a/myadv/inc/app.css
+++ b/myadv/inc/app.css
@@ -146,7 +146,18 @@ input, select{
 
 /*==[ ]===============================*/
 
-
+.header-meses{
+    width: 100%;
+    height: 30px;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    align-items: center;
+    margin-top: 10px;
+    background-color: #192516;
+    color: #fff;
+    padding-left: 15px;
+}
 /*==[ ]===============================*/
 
 
