--- a/eventos/app.css
+++ b/eventos/app.css
@@ -21,7 +21,7 @@ body {
 body {
     font-size: 1.8rem;
     text-decoration: none;
-    
+    background-color:#C5CAE9;
 }
 
 a {
@@ -42,8 +42,7 @@ p {
     height: auto;  
     display: flex;
     flex-direction: column;  
-    background-color: #b9e6ad;
-   
+      
 }
 
 
@@ -52,7 +51,7 @@ p {
 
 .mobile-menu {
     width: 100%;
-    height: 40px;   
+    height: 50px;   
     display: flex;
     flex-direction: row; 
     justify-content: space-between; 
@@ -66,7 +65,7 @@ p {
 }
 
 .menu-color{
-    background-color: #212121;
+    background-color: #1A237E;
 }
 
 /*==[ ]===============================*/
@@ -77,7 +76,7 @@ p {
     display: flex;
     flex-direction: column;   
     padding: 10px;
-    background-color:antiquewhite;
+    
     gap: 5px;
 }
 
@@ -94,6 +93,7 @@ form{
     height: auto;   
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-top: 10px;
 }
 
@@ -102,6 +102,7 @@ form{
     height: auto;   
     display: flex;
     flex-direction: row;
+    align-items: center;
     margin-top: 10px;
     gap: 10px;
 }
@@ -129,7 +130,7 @@ label{
     justify-content: space-between; 
     align-items: center;
     margin-top: 10px;
-    background-color: #192516;
+    background-color: #303F9F;
     color: #fff;
     padding-left: 15px;
 }
@@ -175,18 +176,26 @@ label{
 
 .lista-grid{
     width: 100%;
-    height: auto;   
+    height: 30px;   
     display: flex;
     flex-direction: row;
     justify-content: space-between;   
     align-items: center;
-    background-color: #e6f8e2;
+    border-bottom: 1px solid #E8EAF6;
     margin-top: 10px;
     gap: 10px;
+    cursor: pointer;
 }
 
+.lista-grid:hover{  
+    background-color:#9FA8DA;
+}
+
+
 .lista-grid i{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
+    color: red;
+    cursor: pointer;
 }
 
 /*==[ ]===============================*/
@@ -218,7 +227,6 @@ margin-top: -560px;
         height: auto;  
         display: flex;
         flex-direction: column;  
-        background-color: #b9e6ad;
         margin-top: 0px;
     }
 }
