--- a/eventos/app.css
+++ b/eventos/app.css
@@ -76,7 +76,6 @@ p {
     display: flex;
     flex-direction: column;   
     padding: 10px;
-    
     gap: 5px;
 }
 
@@ -138,6 +137,7 @@ label{
 .header-meses i{
     font-size: 1.8rem;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 /*==[ ]===============================*/
@@ -176,7 +176,7 @@ label{
 
 .lista-grid{
     width: 100%;
-    height: 30px;   
+    height: auto;   
     display: flex;
     flex-direction: row;
     justify-content: space-between;   
@@ -185,6 +185,16 @@ label{
     margin-top: 10px;
     gap: 10px;
     cursor: pointer;
+}
+
+.lista-grid-center{
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;   
+    align-items: center;   
+    
 }
 
 .lista-grid:hover{  
