--- a/eventos/src/app.css
+++ b/eventos/src/app.css
@@ -69,6 +69,65 @@ p {
     background-color: #1A237E;
 }
 
+/*==[ ]===============================*/
+/*=================================*/
+
+
+.logo-box{
+    width: 200px;
+    height: 300px;   
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.logo{
+    width: 160px;
+    height: 160px;   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    object-fit: cover;   
+}
+
+.login{
+    width: 120px;
+    height: auto;   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+    
+}
+
+.login button{
+    width: 80px;
+    height: 35px;   
+    margin-top: 15px;
+    border:none;
+    cursor: pointer;
+}
+
+.login input{
+    width: 100%;
+    height: 35px; 
+    border: 1px solid #ccc;  
+    text-align: center;
+    padding-left: 8px;
+    border-radius: 3px;
+}
+
+
+/*=================================*/
+/*==[ ]===============================*/
 
 
 
