--- a/css/app.css
+++ b/css/app.css
@@ -51,18 +51,76 @@ a {
 .l-full {
     width: 100%;
     height: auto;  
-}
-
-.l-center {
-    max-width: 1200px;
-    height: auto;  
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-/*==================================*/
+.l-center {
+    width: 1024px;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+}
+
+/*==[]================================*/
+
+.l-menu {
+    width: 100%;
+    height: 40px;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px 0px 10px;
+}
+/*==[]================================*/
+
+.t-container {
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    background-color: antiquewhite;
+    padding: 15px;
+}
+/*==[]================================*/
+
+.card-container {
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    background-color: antiquewhite;  
+    gap: 2px;  
+}
+
+.cc-img{
+    width: 100%;
+    height: 200px;  
+    display: flex;
+    flex-direction: column;   
+    object-fit:cover;
+    background-color: aquamarine;
+}
+
+.cc-img img{
+    width: 100%;
+    height: 100%;  
+}
+
+
+.cc-body{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 5px;
+}
+
+/*==[]================================*/
+
 
 .container {
     width: 100%;
@@ -87,13 +145,13 @@ a {
     background-color: #1b582b;
 }
 /*==================================*/
+
 .grid-auto{
-    max-width: 1200px;
-    height: auto; 
-    margin: auto; 
+    width: 1024px;
+    height: auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    gap: 60px;
     margin-top: 15px;
 }
 
@@ -110,13 +168,28 @@ a {
     width: 100%;   
 }
 
+/*==[ 640px ]===============================*/
+
+@media (max-width: 1024px) {
+    .l-center, .grid-auto{       
+       width: 100%;
+       padding: 15px;
+    }
+   
+}
+
+
+
 
 /*==[ 640px ]===============================*/
 
-@media (max-width: 850px) {
-    .grid-auto{       
-        gap: 15px;
-        margin-top: 15px;
+@media (max-width: 940px) {
+    .l-center, .grid-auto{       
+        width: 100%;
         padding: 10px;
+     }
+    .grid-auto{       
+        gap: 30px;
+        margin-top: 15px;
     }
 }
