--- a/css/app.css
+++ b/css/app.css
@@ -84,15 +84,18 @@ a {
     background-color: antiquewhite;
     padding: 15px;
 }
-/*==[]================================*/
+/*==[ CARD ]================================*/
 
 .card-container {
     width: 100%;
     height: auto;  
     display: flex;
     flex-direction: column;
-    background-color: antiquewhite;  
-    gap: 2px;  
+    background-color: #fff;  
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
 }
 
 .cc-img{
@@ -116,8 +119,65 @@ a {
     display: flex;
     flex-direction: column;
     padding: 10px;
-    gap: 5px;
+   
 }
+
+.cctitulo{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+}
+
+.cclocal{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    margin-top: -5px;
+    font-size: 1.2rem;
+}
+.ccdata{
+    font-size: 1.6rem;
+}
+
+.ccdesc{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    margin-top: 8px;
+}
+
+.cc-linha {
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;    
+    margin-top: 8px;
+}
+
+.cc-linha-icon {
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;    
+    margin-top: 30px;
+}
+.cc-linha-icon i{
+   font-size: 1.8rem;
+   cursor: pointer;
+}
+
+
+
+
+
 
 /*==[]================================*/
 
