trabalhos no ui e desingner

--- a/css/app.css
+++ b/css/app.css
@@ -63,6 +63,9 @@ a {
     flex-direction: column;
 }
 
+.l-padding{
+    padding: 100px 0px 100px 0px;
+}
 /*==[]================================*/
 
 .l-menu {
@@ -84,6 +87,19 @@ a {
     background-color: antiquewhite;
     padding: 15px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*==[ CARD ]================================*/
 
 .card-container {
@@ -91,29 +107,27 @@ a {
     height: auto;  
     display: flex;
     flex-direction: column;
-    background-color: #fff;  
+    background-color: #f9fbe7;  
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
 
 }
 
-.cc-img{
+.card-img{
     width: 100%;
     height: 200px;  
     display: flex;
     flex-direction: column;   
-    object-fit:cover;
-    background-color: aquamarine;
+    background-color: #33691e;
 }
 
-.cc-img img{
+.card-img img{
     width: 100%;
     height: 100%;  
 }
 
-
-.cc-body{
+.card-body{
     width: 100%;
     height: auto;  
     display: flex;
@@ -122,60 +136,42 @@ a {
    
 }
 
-.cctitulo{
-    width: 100%;
-    height: auto;  
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
+.card-titulo{
+    font-size: 2.1rem;
+    
+}
+.card-local{  
+    margin-top: -2px;
+    font-size: 1.4rem;
+    color: #689f38;
 }
 
-.cclocal{
-    width: 100%;
-    height: auto;  
-    display: flex;
-    flex-direction: column;
-    margin-top: -5px;
-    font-size: 1.2rem;
-}
-.ccdata{
-    font-size: 1.6rem;
+.card-data{  
+    margin-top: 10px; 
+    
 }
 
-.ccdesc{
-    width: 100%;
-    height: auto;  
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
+.card-descricao{  
+    margin-top: 10px; 
+   
 }
 
-.cc-linha {
+.grid-icon{
     width: 100%;
     height: auto;  
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;    
-    margin-top: 8px;
+    display: grid;
+    grid-template-columns: 30px 1fr 30px 30px 30px 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+   margin-top: 15px;
 }
 
-.cc-linha-icon {
-    width: 100%;
-    height: auto;  
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;    
-    margin-top: 30px;
-}
-.cc-linha-icon i{
-   font-size: 1.8rem;
+
+.grid-icon i{   
    cursor: pointer;
+   color: #689f38;
 }
-
-
-
 
 
 
@@ -228,6 +224,21 @@ a {
     width: 100%;   
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*==[ 640px ]===============================*/
 
 @media (max-width: 1024px) {
@@ -246,7 +257,7 @@ a {
 @media (max-width: 940px) {
     .l-center, .grid-auto{       
         width: 100%;
-        padding: 10px;
+        padding: 5px;
      }
     .grid-auto{       
         gap: 30px;
