--- a/ui/app.css
+++ b/ui/app.css
@@ -42,61 +42,131 @@ a {
     background-color: antiquewhite;
 }
 
+.m-container {
+    width: 1750px;
+    height: 900px;
+    display: flex;
+    flex-direction: column;   
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);  
+    background-color: #ccc;
+}
 
 
 /*==[ ]===============================*/
 
-.menux {
+.menu-x {
     width: 100%;
-    height: 40px;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    padding: 15px;   
+    padding: 10px;   
+    background-color:#263238 ;
+    color: #fff;
+    cursor: pointer;
 }
 
-.cbody {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;  
-    margin: 15px;
+.menu-x i:hover{
+    color: #ffab00;
+    font-weight: bold;
 }
 
 
-/*==[ ]===============================*/
-
-
-
-.linha {
+.m-body {
     width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 400px 1fr;
     gap: 15px;
+    margin-top: 10px;
+    padding: 15px;
 }
 
-
-.box {
-    width: 200px;
+.m-box1{
+    width: 100%;
     height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.m-personagem{
+    width: 100%;
+    height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: antiquewhite;
-    margin-top: 15px;
 }
 
-.menu {
+.m-box2{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;  
+}
+
+.box2-menu {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;  
+    gap: 15px;
+}
+
+.box2-menu p{
+    width: 100%;
+    height: auto; 
+    padding: 5px 15px 5px 15px; 
+    background-color:#263238 ;
+    text-align: center;
+    color:#fff;
+    cursor: pointer;
+}
+
+.box2-menu p:hover{
+    background-color:#516d7a ;
+}
+.mb-container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding-top: 15px;
+}
+
+
+
+.m-mochila{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;   
+    gap: 11px;
+   
+}
+
+.box{
+    width: 120px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: antiquewhite;
-    margin-top: 15px;
-    gap: 10px;
+    background-color: #b0bec5;
+    cursor: pointer;
 }
+.box:hover{
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+}
+
+/*==[ ]===============================*/
+
