--- a/ui/app.css
+++ b/ui/app.css
@@ -161,6 +161,7 @@ a {
     align-items: center;
     background-color: #b0bec5;
     cursor: pointer;
+    z-index: 2;
 }
 .box:hover{
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
