--- a/designer/css/03.css
+++ b/designer/css/03.css
@@ -95,6 +95,22 @@ img{
     padding: 10px 15px 10px 15px;
 }
 
+
+.card6 {
+    width: 100%;
+    height: 280px;  
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(247, 168, 65); 
+    background-image: url('../img/g9.png');
+    background-position: center;
+    background-size: cover;
+    margin-top: 15px; 
+}
+
+
+
+
 /*==[]================================*/
 
 .grid-menu{
@@ -104,6 +120,7 @@ img{
     grid-template-columns: repeat(5, 1fr);  
     gap: 2px; 
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-top: 30px;
 }
 .mbox{
     width: 60px;
@@ -121,6 +138,67 @@ img{
 .mbox p{
    font-size: 1.2rem;
    margin-top: 5px;
+}
+
+
+/*==[]================================*/
+
+.card6b {
+    width: 240px;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-top: 15px; 
+    border-radius: 6px;
+    padding-bottom: 5px;
+}
+
+
+.lcard-img{
+    width: 100%;
+    height: 160px;  
+    display: flex;
+    flex-direction: column; 
+    border-radius: 6px 6px 0px 0px;  
+}
+
+.lcard-img img{
+    width: 100%;
+    height: 160px;  
+    border-radius: 6px 6px 0px 0px;  
+}
+
+
+.lbody{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 10px;
+    gap: 10px;
+}
+
+.lbody button{
+    width: 70px;
+    height: 23px;  
+    border-radius: 8px;  
+    border: none;
+    background-color: orangered;
+    color: #fff;
+}
+
+.linha-center{
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 5px;
 }
 
 
@@ -183,6 +261,7 @@ img{
     display: flex;
     flex-direction: row; 
     gap: 5px;
+    align-items: center;
 }
 
 .linha i{
