--- a/eventos/src/app.css
+++ b/eventos/src/app.css
@@ -28,6 +28,16 @@ a {
     text-decoration: none;
 }
 
+
+.lbody{
+    width: 100%;
+    height: 100%;
+    background-image: url('bcg-min.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+
 /*==[ ]===============================*/
 
 
