--- a/eventos/src/app.css
+++ b/eventos/src/app.css
@@ -41,6 +41,128 @@ a {
 /*==[ ]===============================*/
 
 
+.l-full {
+    width: 100%;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.l-center {
+    width: 1024px;
+    height: auto;  
+    display: flex;
+    flex-direction: column;
+}
+
+.menu-x {
+    width: 100%;
+    height: 40px;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: flex-end; 
+    align-items: center; 
+    
+}
+
+.menu-x i{
+    font-size: 2.4rem;
+    cursor: pointer;
+    color: #fff;
+ }
+
+ .colorm{
+    background-color:#558b2f81;
+ }
+
+/*==[ POPUP ]===============================*/
+
+ #popup-bcg {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;  
+    display: block;
+    background-color: #558b2f81; 
+    z-index: 4;
+}
+
+#popup-card{
+    width: 300px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -30%);
+   border-radius: 4px;
+   padding-bottom: 30px;
+   z-index: 5;
+}
+
+.f-menu-x {
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: flex-end;  
+    padding: 5px;
+    
+}
+
+.f-menu-x i{
+    font-size: 2rem;
+    cursor: pointer;
+    color: rgb(129, 129, 129);
+ }
+
+ .l-info {
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;  
+    padding: 10px;
+    background-color: #FF8A65;
+    
+}
+
+.f-login {
+    width: 100%;
+    height: auto;   
+    display: flex;
+    flex-direction: column; 
+    align-items: center;   
+    margin-top: 30px;
+}
+
+
+.f-login input{
+    width: 150px;
+    height: 35px; 
+    border: 1px solid #212121;
+    text-align: center;
+}
+
+.f-login button{
+    width: 100px;
+    height: 35px; 
+    background-color: #558B2F;
+    border: none;
+    border-radius: 6px;
+    margin-top: 15px;
+    color: #fff;
+    cursor: pointer;
+}
+
+
+/*==================================*/
+
+
 
 p {
     font-size: 1.6rem; 
@@ -106,8 +228,8 @@ p {
 
 
 .logo-box{
-    width: 200px;
-    height: 300px;   
+    width: 250px;
+    height: 250px;   
     margin: 0;
     position: absolute;
     top: 50%;
@@ -118,44 +240,42 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
    
 }
 
 .logo{
-    width: 160px;
-    height: 160px;   
+    width: 250px;
+    height: 250px;   
     display: flex;
     flex-direction: column;
     justify-content: center;
     object-fit: cover;   
-}
-
-.login{
-    width: 120px;
-    height: auto;   
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+	transform: scale(1);
+	animation: pulse 2s infinite;
+    border-radius: 50%;
+    padding: 15px;
     
 }
 
-.login button{
-    width: 80px;
-    height: 35px;   
-    margin-top: 15px;
-    border:none;
-    cursor: pointer;
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+	}
 }
 
-.login input{
-    width: 100%;
-    height: 35px; 
-    border: 1px solid #ccc;  
-    text-align: center;
-    padding-left: 8px;
-    border-radius: 3px;
-}
 
 
 /*=================================*/
